--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,17 @@
 version: "3.9"
 services:
   jenkins:
+    privileged: true
+    user: 1000:998
     image: fortinetdemo/jenkins:jcasc
     volumes:
       - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/bin/docker:/usr/bin/docker
     container_name: jenkins
     environment:
-      - JENKINS_ADMIN_ID=XXXXX
-      - JENKINS_ADMIN=admin
-      - JENKINS_ADMIN_PASSWORD=XXXXX
+      - JENKINS_ADMIN_ID=admin
+      - JENKINS_ADMIN_PASSWORD=#add password here
     ports:
       - 8080:8080
       - 50000:50000
